// 
// AUTOGENERATED. DO NOT MODIFY THIS FILE DIRECTLY.
//
syntax = "proto3";

package com.igeolise.traveltime.rabbitmq.responses;

message GeohashFastResponse {
  repeated string keys = 1;
  repeated int32 means = 2;
  repeated int32 mins = 3;
  repeated int32 maxes = 4;
}